--- a/app/src/main/res/layout/rw_item.xml
+++ b/app/src/main/res/layout/rw_item.xml
@@ -6,14 +6,15 @@
 
     <ImageView
         android:id="@+id/poster"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_weight="1"
         app:srcCompat="@android:drawable/ic_menu_gallery" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_weight="2"
         android:orientation="horizontal">
 
