--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -3,17 +3,17 @@
 
     <item
         android:id="@+id/navigation_trending"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_trending"
         android:title="@string/title_trending" />
 
     <item
         android:id="@+id/navigation_search"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/ic_search"
         android:title="@string/title_search" />
 
     <item
         android:id="@+id/navigation_favorites"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/ic_fav"
         android:title="@string/title_favorites" />
 
 </menu>
