--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -10,6 +10,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -60,6 +61,7 @@
         android:id="@+id/dateTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:text="@string/date"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -79,6 +81,7 @@
         android:id="@+id/genresTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/genres"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -100,6 +103,7 @@
         android:id="@+id/countryTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/country"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -121,6 +125,7 @@
         android:id="@+id/runtimeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/runtime"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -140,6 +145,7 @@
         android:id="@+id/revenueTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/revenue"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -159,6 +165,7 @@
         android:id="@+id/statustextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/status"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -173,4 +180,14 @@
         android:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/statustextView"
         app:layout_constraintTop_toBottomOf="@+id/revenue" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/minutes"
+        app:layout_constraintStart_toEndOf="@+id/runtime"
+        app:layout_constraintTop_toBottomOf="@+id/country" />
 </android.support.constraint.ConstraintLayout>
