--- a/app/src/main/res/layout/rw_item.xml
+++ b/app/src/main/res/layout/rw_item.xml
@@ -28,7 +28,7 @@
                 app:srcCompat="@android:drawable/btn_star_big_off" />
 
             <TextView
-                android:id="@+id/rating"
+                android:id="@+id/popularity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -44,7 +44,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_toEndOf="@+id/poster"
-                android:layout_toStartOf="@+id/rating"
+                android:layout_toStartOf="@+id/popularity"
                 android:text="TextView" />
 
             <ImageView
